completed problem 1378 and 1407

--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -3564,6 +3564,229 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc284e5c-c222-4981-a191-2077e0452792",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1378. Replace Employee ID with Unique the Identifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e554a4e8-aca8-4dde-afec-76195eb684c7",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04332cc5-e046-4bb6-afb9-bf2fa0c0be8a",
+   "metadata": {},
+   "source": [
+    "Table: Employees\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | id            | int     |\n",
+    "    | name          | varchar |\n",
+    "    +---------------+---------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains the id and the name of an employee in a company.\n",
+    " \n",
+    "\n",
+    "Table: EmployeeUNI\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | id            | int     |\n",
+    "    | unique_id     | int     |\n",
+    "    +---------------+---------+\n",
+    "(id, unique_id) is the primary key (combination of columns with unique values) for this table.\n",
+    "Each row of this table contains the id and the corresponding unique id of an employee in the company.\n",
+    " \n",
+    "\n",
+    "Write a solution to show the unique ID of each user, If a user does not have a unique ID replace just show null.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b911937d-85ab-4fa6-9ddb-738e566943da",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e502b8d-0f47-48a9-bc8f-97f164c43219",
+   "metadata": {},
+   "source": [
+    "    SELECT unique_id, name FROM Employees\n",
+    "    LEFT JOIN EmployeeUNI USING(id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd185aa-27fb-4377-b961-cfdeb26ddfdf",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6302d2f9-f308-48bb-a9f7-12c9535d426b",
+   "metadata": {},
+   "source": [
+    "all are fairly similar to my solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c8495f7-7c30-4043-bf7b-a63222e5b21d",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d53b765-a808-40d2-8bae-84fa43b030bf",
+   "metadata": {},
+   "source": [
+    "nothing to add - fairly straightforward problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28aedbbe-267b-4692-ae97-b1e7a4ceb1e6",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1407. Top Travellers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f115e6ba-7692-4a6c-8831-f0a56eef666e",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547d061b-2682-4c8f-805a-c3b5decb111e",
+   "metadata": {},
+   "source": [
+    "Table: Users\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | id            | int     |\n",
+    "    | name          | varchar |\n",
+    "    +---------------+---------+\n",
+    "id is the column with unique values for this table.\n",
+    "name is the name of the user.\n",
+    " \n",
+    "\n",
+    "Table: Rides\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | id            | int     |\n",
+    "    | user_id       | int     |\n",
+    "    | distance      | int     |\n",
+    "    +---------------+---------+\n",
+    "id is the column with unique values for this table.\n",
+    "user_id is the id of the user who traveled the distance \"distance\".\n",
+    " \n",
+    "\n",
+    "Write a solution to report the distance traveled by each user.\n",
+    "\n",
+    "Return the result table ordered by travelled_distance in descending order, if two or more users traveled the same distance, order them by their name in ascending order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1102eb0-7104-498b-adf3-aab35daad7e6",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43995378-ae30-41ea-8e84-d92263c0c9f4",
+   "metadata": {},
+   "source": [
+    "    SELECT u.name, IFNULL(SUM(r.distance), 0) AS travelled_distance\n",
+    "    FROM Users u\n",
+    "    LEFT JOIN Rides r ON u.id = r.user_id\n",
+    "    GROUP BY u.id\n",
+    "    ORDER BY travelled_distance DESC, u.name\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aebd5cbb-ed27-47e4-9810-ca1998b1cde6",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2430de29-cfd8-4e0a-baf7-81154ebd41ff",
+   "metadata": {},
+   "source": [
+    "a solution from leetcode. somewhat similar to mine but uses CASE WHEN and OVER(), which i have used before but am not 100% confident in using\n",
+    "\n",
+    "    SELECT DISTINCT u.name, \n",
+    "    CASE WHEN r.distance IS NOT NULL THEN SUM(r.distance) OVER(PARTITION BY r.user_id ORDER BY r.user_id) \n",
+    "    ELSE 0 END AS travelled_distance \n",
+    "    FROM Users u \n",
+    "    LEFT JOIN Rides r ON u.id=r.user_id \n",
+    "    ORDER BY travelled_distance DESC, u.name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b77b50f-edae-4df8-8482-98b53452f685",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "677a54c5-72e3-424a-9c87-12efc904d958",
+   "metadata": {},
+   "source": [
+    "in my attempt, important to GROUP BY u.id and not u.name, because if you have two users with the same name but different id you do not pass all the test cases. LEFT JOIN is also important because for some reason if you have a user with an id but no travel distance, it must display 0 travelled_distance in the output table (which is why I used the IFNULL() also)\n",
+    "\n",
+    "    new function: IFNULL()\n",
+    "\n",
+    "    description: Return the specified value IF the expression is NULL, otherwise return the expression\n",
+    "\n",
+    "    syntax: IFNULL(expression, alt_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
