--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -38,7 +38,7 @@
     "    3. aggregations performed after the grouping - HAVING COUNT(), SUM(), etc.\n",
     "2. study order of operations (which clauses come first, and which statements are performed first and why - are they all executed purely in sequence, or is that syntax?)\n",
     "3. difference between a derived table and subquery? \n",
-    "4. maybe go over every problem and add some concept keywords in the title in order to make it easier to review certain topics (this should be done soon, as many concepts have been encountered so far, and some of them not very clear. understanding them would help solidify the foundation)\n",
+    "4. **maybe go over every problem and add some concept keywords in the title in order to make it easier to review certain topics (this should be done soon, as many concepts have been encountered so far, and some of them not very clear. understanding them would help solidify the foundation)**\n",
     "5. need to look into how partitions work in more detail"
    ]
   },
@@ -3629,7 +3629,9 @@
    "metadata": {},
    "source": [
     "    SELECT unique_id, name FROM Employees\n",
-    "    LEFT JOIN EmployeeUNI USING(id)"
+    "    LEFT JOIN EmployeeUNI USING(id)\n",
+    "    \n",
+    "status = success"
    ]
   },
   {
@@ -3783,6 +3785,114 @@
     "    description: Return the specified value IF the expression is NULL, otherwise return the expression\n",
     "\n",
     "    syntax: IFNULL(expression, alt_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "410a867f-e641-4ab6-b4a2-2f5454b0e1e1",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1484. Group Sold Products by the Date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c218d0f7-cd59-462b-a71f-4ed2565d7891",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c697979f-6b86-4093-a6a5-74dc5390b0bc",
+   "metadata": {},
+   "source": [
+    "Table Activities:\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | sell_date   | date    |\n",
+    "    | product     | varchar |\n",
+    "    +-------------+---------+\n",
+    "There is no primary key (column with unique values) for this table. It may contain duplicates.\n",
+    "Each row of this table contains the product name and the date it was sold in a market.\n",
+    " \n",
+    "\n",
+    "Write a solution to find for each date the number of different products sold and their names.\n",
+    "\n",
+    "The sold products names for each date should be sorted lexicographically.\n",
+    "\n",
+    "Return the result table ordered by sell_date."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b47c43-d5f1-4ce6-a17d-cbf41410ec0c",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b61a3428-eb1a-43b1-b959-c7b640fd50aa",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    SELECT sell_date, COUNT(DISTINCT(product)) AS num_sold, GROUP_CONCAT(DISTINCT(product) ORDER BY product) AS products\n",
+    "    FROM Activities\n",
+    "    GROUP BY sell_date\n",
+    "    ORDER BY sell_date\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfdc8959-8a17-40eb-afb3-c6095c705bc4",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12164a61-3cfd-4527-a943-b33adce51b98",
+   "metadata": {},
+   "source": [
+    "most solutions are similar to mine, but they have an extra \"argument\" to their GROUP_CONCAT that allows for extra control of the output, which is the SEPERATOR argument\n",
+    "\n",
+    "\n",
+    "    SELECT sell_date, COUNT(DISTINCT(product)) AS num_sold, GROUP_CONCAT(DISTINCT(product) ORDER BY product SEPARATOR ',') AS products\n",
+    "    FROM Activities\n",
+    "    GROUP BY sell_date\n",
+    "    ORDER BY sell_date\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cac0564-8cf8-4f1c-9b9c-350d6632b198",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2206fbe7-02f8-4af9-9e71-b61ea2ff6d9d",
+   "metadata": {},
+   "source": [
+    "the secret sauce for this problem is GROUP_CONCAT which allows you to use a CONCAT() function with a GROUP BY, essentially. \n",
+    "\n",
+    "the only real hic up in this problem is that both the COUNT for the num_sold column and the GROUP_CONCAT for the products column need to grab distinct products (so you only want to know the number of different product solds, not the number of total product sold)"
    ]
   },
   {
