--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -3890,9 +3890,165 @@
    "id": "2206fbe7-02f8-4af9-9e71-b61ea2ff6d9d",
    "metadata": {},
    "source": [
-    "the secret sauce for this problem is GROUP_CONCAT which allows you to use a CONCAT() function with a GROUP BY, essentially. \n",
+    "1. the secret sauce for this problem is GROUP_CONCAT which allows you to use a CONCAT() function with a GROUP BY, essentially. \n",
     "\n",
-    "the only real hic up in this problem is that both the COUNT for the num_sold column and the GROUP_CONCAT for the products column need to grab distinct products (so you only want to know the number of different product solds, not the number of total product sold)"
+    "* syntax:\n",
+    "\n",
+    "        GROUP_CONCAT(expr \n",
+    "                [ORDER BY {unsigned_integer | col_name | expr} ASC | DESC] \n",
+    "                [SEPARATOR str_val])\n",
+    "\n",
+    "2. the only real hic up in this problem is that both the COUNT for the num_sold column and the GROUP_CONCAT for the products column need to grab distinct products (so you only want to know the number of different product solds, not the number of total product sold)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a300135d-7f57-4044-82a2-818e1479f06a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1517. Find Users with Valid E-mails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c548a47-7a98-4b47-b2e0-549152571d47",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "297fddff-a958-4ca0-a0d1-4b167ab6771f",
+   "metadata": {},
+   "source": [
+    "Table: Users\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | user_id       | int     |\n",
+    "    | name          | varchar |\n",
+    "    | mail          | varchar |\n",
+    "    +---------------+---------+\n",
+    "user_id is the primary key (column with unique values) for this table.\n",
+    "This table contains information of the users signed up in a website. Some e-mails are invalid.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the users who have valid emails.\n",
+    "\n",
+    "A valid e-mail has a prefix name and a domain where:\n",
+    "\n",
+    "The prefix name is a string that may contain letters (upper or lower case), digits, underscore '_', period '.', and/or dash '-'. The prefix name must start with a letter.\n",
+    "The domain is '@leetcode.com'.\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "237faedd-920d-4942-bdce-104110aab150",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3d50b6f-3312-4e25-9ae2-b9f4c22e76ab",
+   "metadata": {},
+   "source": [
+    "NOTE: for some reason without the additional condition LOCATE('?', mail) = 0 a test case would fail where the domain is @leetcode?com -> is the ? and . considered the same in the regex?\n",
+    "\n",
+    "    SELECT user_id, name, mail\n",
+    "    FROM Users\n",
+    "    WHERE mail REGEXP '^[a-zA-Z][a-zA-Z0-9._-]*@leetcode\\.com$' AND LOCATE('?', mail) = 0\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e588ce69-c197-4fac-ae41-7ac90eb1273a",
+   "metadata": {},
+   "source": [
+    "NOTE: the addition of another backslash in the domain part of the regex fixes the issue. i consider this the best answer\n",
+    "    \n",
+    "    SELECT user_id, name, mail\n",
+    "    FROM Users\n",
+    "    WHERE mail REGEXP '^[a-zA-Z][a-zA-Z0-9._-]*@leetcode\\\\.com$'\n",
+    "    \n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e29ba8a3-f0e1-4452-afe9-f459c7c8978d",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7fa5e2b-4878-4338-89d0-3e34aeb3aaf1",
+   "metadata": {},
+   "source": [
+    "this leetcode solution uses a different pattern. really confused as to why this one works because the (\\\\\\\\?com)?\\\\\\\\.com makes the ?com optional meaning you can match both @leetcode?com AND @leetcode.com \n",
+    "\n",
+    "    SELECT user_id, name, mail\n",
+    "    FROM Users\n",
+    "    WHERE mail REGEXP '^[A-Za-z][A-Za-z0-9_\\.\\-]*@leetcode(\\\\?com)?\\\\.com$'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f9db1b-8f25-40cf-9956-9eefb6f1e272",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "148d87ff-df0e-42d1-abac-c9021122e463",
+   "metadata": {},
+   "source": [
+    "1. here is the explanation for the regex expression used in my attempt:\n",
+    "\n",
+    "* ^ - Ensures the match starts at the beginning of the string.\n",
+    "* [a-zA-Z] - The string must start with an uppercase or lowercase letter.\n",
+    "* [a-zA-Z0-9._-]* - Allows zero or more letters (uppercase or lowercase), digits, underscores, periods, or dashes.\n",
+    "* @leetcode\\\\.com - Specifies that the string ends with @leetcode.com. (Note: . is escaped with \\ to match a literal period. Note2: an additonal backslash is accually required for MySQL, as seen in the second attempt)\n",
+    "* $ - Ensures the match ends at the end of the string.\n",
+    "\n",
+    "2. new function: LOCATE()    <--- **also the way this is formatted should be the gold standard when introducing new functions**\n",
+    "\n",
+    "* definition:\n",
+    "           \n",
+    "        The LOCATE() function returns the position of the first occurrence of a substring in a string.\n",
+    "\n",
+    "        If the substring is not found within the original string, this function returns 0.\n",
+    "\n",
+    "        This function performs a case-insensitive search.\n",
+    "\n",
+    "        Note: This function is equal to the POSITION() function.\n",
+    "        \n",
+    "* syntax: \n",
+    "        \n",
+    "        LOCATE(substring, string, start)\n",
+    "        \n",
+    "* parameter values\n",
+    "\n",
+    "\n",
+    "        substring  Required. The substring to search for in string\n",
+    "        string     Required. The string that will be searched\n",
+    "        start      Optional. The starting position for the search. Position 1 is default"
    ]
   },
   {
