--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -4053,6 +4053,150 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae7bd162-a68c-4740-ab28-5bbf9a6dca49",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1527. Patients with a Condition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d52d830-dff7-401c-b971-6636cc46bcc7",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6621797-ac67-4c79-8de2-73665f0f004d",
+   "metadata": {},
+   "source": [
+    "Table: Patients\n",
+    "\n",
+    "    +--------------+---------+\n",
+    "    | Column Name  | Type    |\n",
+    "    +--------------+---------+\n",
+    "    | patient_id   | int     |\n",
+    "    | patient_name | varchar |\n",
+    "    | conditions   | varchar |\n",
+    "    +--------------+---------+\n",
+    "patient_id is the primary key (column with unique values) for this table.\n",
+    "'conditions' contains 0 or more code separated by spaces. \n",
+    "This table contains information of the patients in the hospital.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the patient_id, patient_name, and conditions of the patients who have Type I Diabetes. Type I Diabetes always starts with DIAB1 prefix.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd7009a4-3c81-4a7c-8a65-80ef20a18e85",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f94c43a-db63-4ac4-bff2-be3af13b1f8e",
+   "metadata": {},
+   "source": [
+    "NOTE: fails because some condition code contain DIAB1 in them (such as SADIAB100) \n",
+    "\n",
+    "    SELECT patient_id, patient_name, conditions\n",
+    "    FROM Patients\n",
+    "    WHERE LOCATE('DIAB1', conditions) != 0\n",
+    "\n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8199cffe-a888-4e36-bb35-a515cde03146",
+   "metadata": {},
+   "source": [
+    "NOTE: tried to get fancy by using SUBSTRING() and LOCATE() together but doesn't work, same result as attempt 1. in hindsight this wasn't very clever but just to remind myself you can use functions inside functions...\n",
+    "\n",
+    "    SELECT patient_id, patient_name, conditions\n",
+    "    FROM Patients\n",
+    "    WHERE SUBSTRING(conditions, LOCATE('DIAB1', conditions), 5) = 'DIAB1'\n",
+    "\n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16da4178-c931-4908-8220-aa9c6b639543",
+   "metadata": {},
+   "source": [
+    "    SELECT patient_id, patient_name, conditions\n",
+    "    FROM Patients\n",
+    "    WHERE conditions LIKE 'DIAB1%' OR conditions LIKE '% DIAB1%'\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d21fab98-d461-4eb6-b6aa-f148e2d465b4",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e6c8b13-a19b-41a5-bb31-21ba50da68f8",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution. you can use LOCATE() just about the same way you'd use LIKE\n",
+    "\n",
+    "    SELECT *\n",
+    "    FROM Patients\n",
+    "    WHERE LOCATE('DIAB1', conditions) = 1\n",
+    "       OR LOCATE(' DIAB1', conditions) != 0;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e615c55a-5437-4248-b7ca-d801fe055fe9",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6396a2c0-33cd-4a20-9d26-0069d03ca2a1",
+   "metadata": {},
+   "source": [
+    "1. new function: SUBSTRING() <--- wasn't necessary for this problem but still discovered it\n",
+    "\n",
+    "* definition: \n",
+    "\n",
+    "        The SUBSTRING() function extracts a substring from a string (starting at any position).\n",
+    "\n",
+    "        Note: The SUBSTR() and MID() functions equals to the SUBSTRING() function.\n",
+    "        \n",
+    "* syntax:\n",
+    "\n",
+    "        SUBSTRING(string, start, length)\n",
+    "        \n",
+    "* parameter values:\n",
+    "\n",
+    "        string   Required. The string to extract from\n",
+    "        start    Required. The start position. Can be both a positive or negative number. If it is a positive number, this function extracts from the beginning of the string. If it is a negative number, this function extracts from the end of the string. The position of the first character in the string is 1 and the position of the last character in the string is -1\n",
+    "        length   Optional. The number of characters to extract. If omitted, the whole string will be returned (from the start position)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
