--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -4197,6 +4197,120 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22d4d81b-7993-41be-9bbc-2e7f0d81810c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1581. Customer Who Visited but Did Not Make Any Transactions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fac2ac10-9cfb-4e93-b334-bab067745cb2",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c08d249c-98e9-4abb-a37e-c8f3df777e71",
+   "metadata": {},
+   "source": [
+    "Table: Visits\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | visit_id    | int     |\n",
+    "    | customer_id | int     |\n",
+    "    +-------------+---------+\n",
+    "visit_id is the column with unique values for this table.\n",
+    "This table contains information about the customers who visited the mall.\n",
+    " \n",
+    "\n",
+    "Table: Transactions\n",
+    "\n",
+    "    +----------------+---------+\n",
+    "    | Column Name    | Type    |\n",
+    "    +----------------+---------+\n",
+    "    | transaction_id | int     |\n",
+    "    | visit_id       | int     |\n",
+    "    | amount         | int     |\n",
+    "+----------------+---------+\n",
+    "transaction_id is column with unique values for this table.\n",
+    "This table contains information about the transactions made during the visit_id.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the IDs of the users who visited without making any transactions and the number of times they made these types of visits.\n",
+    "\n",
+    "Return the result table sorted in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31da76ff-d2fd-49d7-a18f-6100e5dcc9de",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a3b0731-fae7-4ec0-aaa7-4efb254aa31e",
+   "metadata": {},
+   "source": [
+    "    SELECT customer_id, COUNT(visit_id) AS count_no_trans\n",
+    "    FROM Visits\n",
+    "    WHERE visit_id NOT IN (SELECT visit_id FROM Transactions)\n",
+    "    GROUP BY customer_id\n",
+    "\n",
+    "NOTE: status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b9a85e5-aee1-477b-9ec8-6a712a4aae32",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0064e18f-fe59-4aee-90df-a719de389404",
+   "metadata": {},
+   "source": [
+    "a solution from leetcode. uses LEFT JOIN instead of a subquery, looks a bit faster\n",
+    "\n",
+    "    SELECT v.customer_id, COUNT(v.visit_id) AS count_no_trans \n",
+    "    FROM Visits v \n",
+    "    LEFT JOIN Transactions t \n",
+    "    ON v.visit_id = t.visit_id  \n",
+    "    WHERE t.transaction_id IS NULL \n",
+    "    GROUP BY v.customer_id;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d5d5854-6ab7-4abf-a40f-2702de6002f5",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfccde62-beb2-4bd7-b68f-1d3107e8e270",
+   "metadata": {},
+   "source": [
+    "nothing to add, fairly straightforward problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
