comment cleanup and additional explanations for certain problems in Arrays & Hashing and Two Pointers

--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1ba92512-9409-497f-9874-c3ebdc6da11a",
    "metadata": {},
    "outputs": [],
@@ -738,13 +738,13 @@
     "            freq[c].append(n)\n",
     "\n",
     "        res = []\n",
-    "        for i in range(len(freq) - 1, 0, -1): # what in the tarnation??\n",
+    "        for i in range(len(freq) - 1, 0, -1):\n",
     "            for n in freq[i]:\n",
     "                res.append(n)\n",
     "                if len(res) == k:\n",
     "                    return res\n",
     "\n",
-    "        # O(n)\n"
+    "        # O(n)"
    ]
   },
   {
@@ -1384,7 +1384,7 @@
     "\n",
     "my own: this solution involves using a way of storing the length of the strings from the initial list into the actual encoded string while also using a delimiter\n",
     "\n",
-    "the encode method is fairly straightforward. initiate an empty string res, then iterate through the strings in the list. for each string, append to res the length of the string followed by the delimiter '#' followed by the string itself. once complete return the res\n",
+    "the encode method is fairly straightforward. initiate an empty string res, then iterate through the strings in the list. for each string, append to res the length of the string followed by the delimiter '#' followed by the string itself. once complete return the res. this will look like \"4#neet4#code4#love4#you\" for the input string [\"neet\", \"code\", \"love\", \"you\"]\n",
     "\n",
     "the decode method is a bit trickier. initiate an empty list to store your result and an index starting at 0 to keep track of where you are when going through the encoded string. start a while loop that begins at i (initially 0, the beginning of the string) and runs until you reach the end of the encoded string. create a new variable j that will initially be equal to i: this will be use to find the delimiter and access the length of the string. create another while loop that uses the j index on the string which will run until the delimiter '#' is reached. once you've reached the delimiter (should be within 1 or 2 iteration: the reason for the while loop is the length could be 42 -> requires 2 iterations or 1056 -> requires 4 iterations, so you don't know how long until you find the delimiter ahead of time) you can now access the length of the word. store that length using the i index (where you started: slicing is here inclusive) and the j index (where the delimiter is: slicing here is noninclusive). now with the length, you can append the string into your list using the following slicing:\n",
     "\n",
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "2e6f151f-7667-48b5-83c2-838c06eb6e99",
    "metadata": {},
    "outputs": [],
@@ -1994,7 +1994,7 @@
     "        nums.sort()\n",
     "\n",
     "        for i, a in enumerate(nums):\n",
-    "            if i > 0 and a == nums[i - 1]: # this is to skip an iteration to prevent using the same value twice and therefore getting duplicates\n",
+    "            if i > 0 and a == nums[i - 1]: # this is to skip an iteration to prevent using the same value twice and therefore getting duplicates in your answer (duplicate numbers within a distinct answer is okay i.e [-1,-1, 2])\n",
     "                continue\n",
     "\n",
     "            l, r = i + 1, len(nums) - 1\n",
@@ -2007,7 +2007,7 @@
     "                else:\n",
     "                    res.append([a, nums[l], nums[r]])\n",
     "                    l += 1\n",
-    "                    while nums[l] == nums[l - 1] and l < r: # this is also to skip iterations to prevent duplicate triplets\n",
+    "                    while nums[l] == nums[l - 1] and l < r: # this is also to skip iterations to prevent duplicate triplets, so all answers are distinct\n",
     "                        l += 1\n",
     "                        \n",
     "        return res"
@@ -2029,7 +2029,7 @@
     "                if i > 0 and a == nums[i - 1]:\n",
     "                    continue\n",
     "\n",
-    "this checks that the current value a isn't the same as the previous (nums[i-1]), and if it is, skip this iteration using continue. this is to avoid getting duplicate triplets in your answer. this is to avoid duplicates with the i pointer\n",
+    "this checks that the current value a isn't the same as the previous (nums[i-1]), and if it is, skip this iteration using continue. this is to avoid getting duplicate triplets in your answer. this is to avoid duplicates with the i pointer. this works since our array is sorted **important to remember**\n",
     "\n",
     "the rest is very similar to two sum II except that you now have 3 pointers: i, l, r. your left pointer will be the third pointer (i) + 1, and your right pointer will be the length of nums - 1 to fit within the index range. start a while loop that continues while your left pointer is smaller than your right one. sum the values of all 3 pointers and check the result. just like in two sum II, if the result is greater than the target (0) decrement the right pointer by 1 and if the result is smaller than 0 increment the left pointer by 1. if the answer is equal to 0, append the result to array you created at the beginning and increment left by 1. now a varation of the chunk of code displayed above is encountered:\n",
     "\n",
@@ -2037,7 +2037,7 @@
     "                while nums[l] == nums[l - 1] and l < r: \n",
     "                    l += 1\n",
     "\n",
-    "this checks that after incrementing the left pointer the value isn't the same as before the incrementation. if it is, increment left by 1 again while making sure that the left pointer is still smaller than the right. this once again is to avoid getting duplicate triplets. this is to avoid duplicates with the l pointer. once the very outer loop is completed, return your answer"
+    "this checks that after incrementing the left pointer the value isn't the same as before the incrementation. if it is, increment left by 1 again while making sure that the left pointer is still smaller than the right. this once again is to avoid getting duplicate triplets. this is to avoid duplicates with the l pointer. once again, **this works because our array is sorted**. once the very outer loop is completed, return your answer"
    ]
   },
   {
@@ -2080,6 +2080,41 @@
     "        return res\n",
     "    \n",
     "# status = success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dcb47b97-eb49-43e2-b5e9-fede9ca5c8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rework 2. the above solution is needlessly complicated, the leetcode solution just way better. this fails due to TLE however\n",
+    "# below however is a solution that is simpler to understand, but less performant (worse in memory & space complexity)\n",
+    "class Solution:\n",
+    "    def threeSum(self, nums: list) -> list:\n",
+    "        res = [] # list of list of triplets\n",
+    "        nums.sort() # need to sort, makes it similar to 2 sum II\n",
+    "\n",
+    "        # the original solution i have is a bit confusing in the way it \n",
+    "        # tries to avoid duplicate answer. will try to simplify, at the cost\n",
+    "        # of performance...\n",
+    "        for i, value in enumerate(nums):\n",
+    "            l, r = i+1, len(nums)-1\n",
+    "\n",
+    "            while l < r:\n",
+    "                cumSum = nums[i] + nums[l] + nums[r]\n",
+    "                if cumSum > 0:\n",
+    "                    r -= 1\n",
+    "                elif cumSum < 0:\n",
+    "                    l += 1\n",
+    "                else:\n",
+    "                    triplet = [nums[i], nums[l], nums[r]]\n",
+    "                    sorted_triplet = sorted(triplet)\n",
+    "                    if sorted_triplet not in res:\n",
+    "                        res.append(sorted_triplet)\n",
+    "                    l += 1\n",
+    "        return res"
    ]
   },
   {
